--- a/views/layout.html
+++ b/views/layout.html
@@ -79,4 +79,26 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
   </body>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    // Load the socket.io library above, then connect to the server.
+    // Because the socket.io server is being run on the same server as your
+    // Express instance, you can connect() without any arguments.
+    var socket = io.connect();
+    socket.on('connect', function(){
+      console.log('connected to server via WebSockets!');
+    });
+    // When 'new_tweet' events are fired, do something with the packaged tweet
+    socket.on('newTweet', function (tweet) {
+      console.log(tweet);
+      alert('Refreshing... check the console...');
+      // some logic to add the new tweet to the DOM…
+      var htmlStr = '<li><a href="/tweets/' + tweet.id + '">#' + tweet.id + '</a><br><a href="/users/' + tweet.name + '">' + tweet.name + '</a> - ' + tweet.content + '</li>';
+      var list = document.getElementByTagName('ul');
+      var entry = document.createElement('li');
+      entry.appendChild(document.createTextNode(htmlStr));
+      list.appendChild(entry);
+    });
+  </script>
 </html>
